yaml/poi_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-poi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tripinsights-poi
  template:
    metadata:
      labels:
        app: tripinsights-poi
    spec:
      containers:
      - name: tripinsights-poi
        image: registryaux6520.azurecr.io/tripinsights/poi:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: poi
---
apiVersion: v1
kind: Service
metadata:
  name: tripinsights-poi
spec:
  ports:
  - port: 80
  selector:
    app: tripinsights-poi
