yaml/tripinsights-ingress-api-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripsinsights-ingress-api-dev
  namespace: api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripinsights-poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: tripinsights-trips
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: tripinsights-user-java
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: tripinsights-userprofile
          servicePort: 80
        path: /api/user
