yaml/tripinsights-ingress-web-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripsinsights-ingress-web-api
  namespace: web-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripinsights-tripviewer
          servicePort: 80
        path: /
